--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/appEvent
+spring.datasource.username = postgres
+spring.datasource.password = root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+#filter order for the authentication
+spring.security.filter.order=10
+RESTURLVersion = api/v1/
+app.jwttoken.message =
+jwt.secret =
+#debug=true
+#trace=true
+spring.output.ansi.enabled=always
