category and upload image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,10 @@ app.jwt.secret=qwepjasbdjwqji@JdjHASHdsufuiAUYUYUv@Ygfsdh23443@@£@£@§324324sdfsd
 #debug=true
 #trace=true
 spring.output.ansi.enabled=always
+app.storage.account.name=
+app.storage.account.key=springboot
+app.storage.account.endpoint.sufix=springboot
+app.storage.account.container=springboot
+app.storage.account.EndpointProtocol=springboot
+app.storage.account.pathName=springboot
 
