--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,19 @@
 			<version>4.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-storage-blob</artifactId>
+			<version>5.0.0</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
