--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.security.filter.order=10
 RESTURLVersion=api/v1/
 app.jwttoken.message="User authenticated with success!"
 app.jwt.exp=90
-app.jwt.secret=qwepjasbdjwqji@JdjHASHdsufuiAUYUYUv@Ygfsdh23443@@£@£@§324324sdfsdgdgdzsjfnjnenlnsnfebweksjdbfhsbewy432@4b3bds
+app.jwt.secret=fdjkgnjsnsjkdfjn@dnsjk3422jb4jnrjsh4r8734evwr§£2n323§54n54¬½7686nb34r terjt4i[¬{[]567(/&/%34543453453%3453543546%$tr
 #debug=true
 #trace=true
 spring.output.ansi.enabled=always
