--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,11 @@
 			<version>5.6.1</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.security</groupId>-->
-<!--			<artifactId>spring-security-web</artifactId>-->
-<!--			<version>5.6.1</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>5.6.1</version>
+		</dependency>
 
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.security</groupId>-->
